<resources>
    <string name="app_name">GoodFood</string>
    <string name="hello">Привет!</string>
    <string name="hint_ves">Введите вес</string>
    <string name="privet">Привет!</string>
    <string name="welcome">Добро пожаловать в GoodFood, расскажи о себе </string>
    <string name="go">Начать</string>
    <string name="go_next">Дальше</string>
    <string name="now_weight">Текущий вес</string>
    <string name="desired_weight">Желаемый вес</string>
    <string name="height">Рост</string>
    <string name="click_me">Click me</string>
    <string name="text">Hello!</string>
    <string name="sex_choose">Твой пол</string>
    <string name="date_choose">Дата рождения</string>
    <string name="default_weight">55</string>
    <string name="default_ml_count">300</string>
    <string name="default_height">175</string>
    <string name="set_name">Твоё имя</string>
    <string name="check_result_data">Проверим\nданные</string>
    <string name="set_lifestyle">Образ жизни</string>
    <string name="set_name_hint">Пиши здесь…</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="lifestyle_underneath">Я - амембка и не делаю лишних движений</string>
    <string name="lifestyle_low">Мало двигаюсь</string>
    <string name="lifestyle_medium">Люблю гулять или просто часто передвигаюсь</string>
    <string name="lifestyle_high">Я тренируюсь в спортзале</string>
    <string name="heightEditTag">height</string>
    <string name="weightEditTag">weight</string>
    <string name="not_ready_text">Здесь пока ведутся работы</string>
    <string name="choose_food_from_list">Или выбери из списка:</string>
    <string name="add_your_own_food">Добавь свою еду</string>
    <string name="food_hint_count">0</string>
    <string name="food_hint_name">Название</string>
    <string name="default_gramm_item">100 г</string>
    <string name="belki_dc">белки</string>
    <string name="zhir_dc">жиры</string>
    <string name="ugl_dc">углеводы</string>
    <string name="kkal_dc">ккал</string>
    <string name="choose_food_item">Выбрать</string>

    <!--    <string name="fontName">monstserrat_regular.ttf</string>-->
</resources>
