<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/HelloFragmentDefault"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lifestyleTextView"
        style="@style/TextOnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/set_lifestyle"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonGo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lifestyleTextView"
        app:layout_constraintVertical_bias="0.32999998">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lifestyleUnderneath"
            style="@style/LifestyleButtonChooser"
            android:text="@string/lifestyle_underneath"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lifestyleTextView"
            tools:targetApi="lollipop" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lifestyleLow"
            style="@style/LifestyleButtonChooser"
            android:layout_marginTop="20dp"
            android:text="@string/lifestyle_low"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lifestyleUnderneath"
            tools:targetApi="lollipop" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lifestyleMedium"
            style="@style/LifestyleButtonChooser"
            android:layout_marginTop="20dp"
            android:text="@string/lifestyle_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lifestyleLow"
            tools:targetApi="lollipop" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lifestyleHigh"
            style="@style/LifestyleButtonChooser"
            android:layout_marginTop="20dp"
            android:text="@string/lifestyle_high"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lifestyleMedium"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <com.example.goodfood.ButtonWithCustomBackground
        android:id="@+id/buttonGo"
        style="@style/ButtonNext"
        android:layout_width="142dp"
        android:layout_height="54dp"
        android:text="@string/go_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>