<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/HelloFragmentDefault"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weight"
        style="@style/TextOnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desired_weight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/minus_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/set_weight"
        app:layout_constraintEnd_toStartOf="@+id/set_weight"
        app:layout_constraintTop_toTopOf="@+id/set_weight">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/minus"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@drawable/left_button_shape"
            app:srcCompat="@drawable/ic_minus" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/plus_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/set_weight"
        app:layout_constraintStart_toEndOf="@+id/set_weight"
        app:layout_constraintTop_toTopOf="@+id/set_weight"
        android:layout_marginStart="40dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@drawable/left_button_shape"
            app:srcCompat="@drawable/ic_new_plus" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/set_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ValueEditText"
        android:text="@string/default_weight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight" />

    <com.example.goodfood.ButtonWithCustomBackground
        android:id="@+id/buttonGo"
        style="@style/ButtonNext"
        android:layout_width="142dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/go_next"/>
</androidx.constraintlayout.widget.ConstraintLayout>