<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/HelloFragmentDefault"
    tools:background="@drawable/hello_background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sex"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:text="@string/sex_choose"
        style="@style/TextOnTop"
        app:layout_constraintBottom_toTopOf="@id/mainContent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.2"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonGo"
        app:layout_constraintTop_toBottomOf="@id/sex"
        app:layout_constraintVertical_weight="1">

        <LinearLayout
            android:id="@+id/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/man"
            app:layout_constraintVertical_bias="0.4">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_woman"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_woman"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/TextContent"
                android:textSize="@dimen/def_text_sex"
                android:text="@string/female"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/woman"
            app:layout_constraintVertical_bias="0.4">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_man"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_man"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/def_text_sex"
                style="@style/TextContent"
                android:text="@string/male"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.goodfood.ButtonWithCustomBackground
        android:id="@+id/buttonGo"
        style="@style/ButtonNext"
        android:layout_width="142dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/go_next"/>

</androidx.constraintlayout.widget.ConstraintLayout>