<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="145dp"
    android:orientation="horizontal"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonGoFrame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/belki_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameFoodText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_medium"
            android:maxLines="2"
            android:minWidth="155dp"
            android:textColor="@color/tabSelectedColor"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Каша вкусная" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/grammHintTint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="2dp"
            android:gravity="start"
            android:text="@string/default_gramm_item"
            android:textColor="#B3B3B3"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameFoodText" />

        <com.example.goodfood.ButtonWithCustomBackground
            android:id="@+id/buttonGo"
            style="@style/ButtonNext"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/add_food_button_selector"
            android:text="@string/choose_food_item"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/belki_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/kkal_layout"
        app:layout_constraintLeft_toRightOf="@id/buttonGoFrame"
        app:layout_constraintRight_toLeftOf="@id/zhir_layout"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/belkiCountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textAlignment="center"
            android:textColor="@color/tabSelectedColor"
            android:textSize="14sp"
            tools:text="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/belkiText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_horizontal"
            android:text="@string/belki_dc"
            android:textColor="@color/tabSelectedColor"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/zhir_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@id/belki_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ugl_layout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/zhirCountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textAlignment="center"
            android:textColor="@color/tabSelectedColor"
            android:textSize="14sp"
            tools:text="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/zhirText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_horizontal"
            android:text="@string/zhir_dc"
            android:textColor="@color/tabSelectedColor"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/kkal_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/buttonGoFrame"
        app:layout_constraintRight_toLeftOf="@id/ugl_layout"
        app:layout_constraintTop_toBottomOf="@id/belki_layout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/kkalCountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textAlignment="center"
            android:textColor="@color/tabSelectedColor"
            android:textSize="14sp"
            tools:text="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/kkalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_horizontal"
            android:text="@string/kkal_dc"
            android:textColor="@color/tabSelectedColor"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ugl_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/zhir_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/kkal_layout"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uglCountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textAlignment="center"
            android:textColor="@color/tabSelectedColor"
            android:textSize="14sp"
            tools:text="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uglText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_horizontal"
            android:text="@string/ugl_dc"
            android:textAlignment="center"
            android:textColor="@color/tabSelectedColor"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>